[package]
name = "ninja"
version = "1.8.2-git"
authors = ["CrLF0710 <crlf0710@gmail.com>"]

[dependencies]
libc = "0.2"
libc-stdhandle = "0.1"
errno = "0.2"
murmurhash64 = "0.3"
clap = "2"
num_cpus = "1"
lazy_static = "0.2"
nom = "3"

[target."cfg(windows)".dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
widestring = "0.2"
wstr = {version = "0.2", features = ["widestring"]}

[build-dependencies]
cc = "1"
