[package]
name = "ninja-build"
version = "0.0.1"
description = "Ninja is a small build system with a focus on speed."
license = "Apache-2.0"
authors = ["The Ninja-rs Project Developers"]
repository = "https://github.com/ninja-rs/ninja-rs"

[dependencies]
libc = "0.2"
libc-stdhandle = "0.1"
errno = "0.2"
murmurhash64 = "0.3"
clap = "2"
num_cpus = "1"
lazy_static = "0.2"
nom = "3"
cfg-if = "0.1"

[target."cfg(windows)".dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
widestring = "0.2"
wstr = {version = "0.2", features = ["widestring"]}

[target."cfg(unix)".dependencies]
libc-spawn = "0.0.1"

[build-dependencies]
cc = "1"
